@@ -6,7 +6,7 @@
  *   Author:	Stefan Hundhammer <sh@suse.de>
  *		Parts auto-generated by KDevelop
  *
- *   Updated:	2003-01-28
+ *   Updated:	2003-01-30
  */
 
 
@@ -176,11 +176,11 @@ KDirStatApp::initActions()
 				       this, SLOT( treemapZoomOut() ),
 				       actionCollection(), "treemap_zoom_out" );
 
-    _treemapSelectParent= new KAction( i18n( "Select parent" ), "up", Key_Asterisk,
+    _treemapSelectParent= new KAction( i18n( "Select Parent" ), "up", Key_Asterisk,
 				       this, SLOT( treemapSelectParent() ),
 				       actionCollection(), "treemap_select_parent" );
 
-    _treemapRebuild 	= new KAction( i18n( "Rebuild treemap" ), 0,
+    _treemapRebuild 	= new KAction( i18n( "Rebuild Treemap" ), 0,
 				       this, SLOT( treemapRebuild() ),
 				       actionCollection(), "treemap_rebuild" );
 
