@@ -1,3 +1,7 @@
+2003-01-30  Stefan Hundhammer  <sh@suse.de>
+
+	* Added new '%t' cleanup placeholder for the KDE trash directory
+
 2003-01-28  Stefan Hundhammer  <sh@suse.de>
 
 	* User cleanups now have an applicaton-wide keyboard shortcut 
